--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "path": "^0.12.7",
     "prisma": "^6.13.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/node": "^24.2.0"
   }
 }
